[metadata]
name = termtables
version = 0.2.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Pretty tables in the terminal
url = https://github.com/nschloe/termtables
project_urls =
    Code=https://github.com/nschloe/termtables
    Issues=https://github.com/nschloe/termtables/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Terminals
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
