[metadata]
name = termtables
version = 0.2.3
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Pretty tables in the terminal
url = https://github.com/nschloe/termtables
project_urls =
    Code=https://github.com/nschloe/termtables
    Issues=https://github.com/nschloe/termtables/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Terminals
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
